# logic-link-lib

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: standalone.yml
all/: CMakeLists.txt  CMakePresets.json
doc/: CMakeLists.txt
include/analyzer/: analyzer.hh
python/: _logiclink_cffi.c  _pi_cffi.c  logiclink_build.py  test.py
src/: CMakeLists.txt  README.md  constants.ccm  constants.hh  exception.ccm  exception.hh  logiclink.ccm  logiclink.h  logiclink.hh  session.ccm  types.hh
src/analysis/: CMakeLists.txt  analysis.ccm  analysis.hh  analyzer.ccm  decompress.hh
src/analysis/debug/: CMakeLists.txt  clockSignal.ccm  clockSignal.hh  flexioSynchro.cc  flexioSynchro.hh  ordinal.cc  ordinal.hh  simplePrint.cc  simplePrint.hh
src/analysis/lowLevel/: CMakeLists.txt  uart.ccm
src/analyzer/: CMakeLists.txt  analyzer.ccm
src/analyzer/debug/: CMakeLists.txt  clockSignal.cc  clockSignal.ccm  clockSignal.hh  debug.ccm  flexioSynchro.cc  flexioSynchro.hh  ordinal.cc  ordinal.hh  simplePrint.cc  simplePrint.hh
src/analyzer/lowLevel/: CMakeLists.txt  lowLevel.ccm  uart.cc  uart.ccm  uart.hh
src/cli/: CMakeLists.txt  cliParams.hh  commandLine.cc  commandLine.hh  main.cc
src/core/: CMakeLists.txt  constants.ccm  core.ccm  exception.ccm
src/core/eventQueue/: alarm.ccm  event.ccm  eventQueue.ccm
src/data/: CMakeLists.txt  acqParams.ccm  backend.cc  backend.ccm  bitSpan.ccm  block.cc  block.ccm  blockArray.cc  blockArray.ccm  data.ccm  downSampler.cc  downSampler.ccm  frontend.cc  frontend.ccm  owningBitSpan.ccm  queue.ccm  rangeBitSpan.ccm  rangeWordSpan.ccm  types.cc  types.ccm  types.hh
src/device/: CMakeLists.txt  autoDevice.cc  autoDevice.ccm  device.cc  device.ccm  factory.cc  factory.ccm  input.ccm  logicLink.cc  logicLink.ccm
src/device/demo/: demoInput.cc  demoInput.ccm
src/device/usb/: CMakeLists.txt  factory.cc  factory.ccm  logicLinkDevice.cc  logicLinkDevice.ccm  usbAsyncInput.cc  usbAsyncInput.ccm  usbDevice.cc  usbDevice.ccm  usbFactory.cc  usbFactory.ccm  usbInput.ccm
src/eventQueue/: CMakeLists.txt  alarm.ccm  event.ccm  eventQueue.ccm
src/input/: input.ccm
src/input/demoInput/: CMakeLists.txt  demoInput.cc  demoInput.ccm
src/input/usb/: CMakeLists.txt  asynchronous.cc  asynchronous.hh  context.hh  request.cc  request.ccm  request.hh  synchronous.cc  synchronous.hh  usb.ccm  usbParams.hh
src/input/usbAsync/: CMakeLists.txt  usbAsync.cc  usbAsync.ccm
src/input/usbSync/: CMakeLists.txt  request.cc  request.ccm  synchronous.cc  usb.ccm
src/lib/: CMakeLists.txt  constants.hh  exception.hh
src/lib/analysis/: CMakeLists.txt  analysis.cc  analysis.hh  decompress.cc  decompress.hh  rearrange.cc  rearrange.hh
src/lib/analysis/debug/: CMakeLists.txt  clockSignal.cc  clockSignal.hh  flexioSynchro.cc  flexioSynchro.hh  ordinal.cc  ordinal.hh  simplePrint.cc  simplePrint.hh
src/lib/data/: acqParams.hh  rawData.hh
src/lib/input/usb/: asynchronous.cc  asynchronous.hh  context.hh  request.cc  request.hh  synchronous.cc  synchronous.hh  usbParams.hh
src/lib/system/linux/: CMakeLists.txt  system.cc
src/peripheral/: CMakeLists.txt  device.cc  device.ccm  factory.cc  factory.ccm  input.ccm  peripheral.ccm
src/peripheral/demo/: CMakeLists.txt  demoDevice.cc  demoDevice.ccm  demoInput.cc  demoInput.ccm
src/peripheral/usb/: CMakeLists.txt  logicLinkDevice.cc  logicLinkDevice.ccm  testRigADevice.cc  testRigADevice.ccm  usbAsyncInput.cc  usbAsyncInput.ccm  usbDevice.cc  usbDevice.ccm  usbFactory.cc  usbFactory.ccm  usbInput.ccm
src/processing/: CMakeLists.txt  analysis.cc  analysis.hh  decompress.cc  decompress.hh  downsample.cc  downsample.ccm  generate.cc  generate.ccm  polyPoints.ccm  processing.ccm  rearrange.cc  rearrange.hh
src/system/: system.hh
src/system/linux/: CMakeLists.txt  system.cc
src/utils/: CMakeLists.txt  bitSpan.ccm  polyPoints.ccm  thread.ccm  util.cc  util.ccm
test/benchmark/: CMakeLists.txt  downsample.cc
test/unit/: CMakeLists.txt  backend.cc  bitSpan.cc  block.cc  blockArray.cc  debugIntegrity.cc  downsample.cc  downsamplePopcount.cc  eventQueue.cc  frontend.cc  generate.cc  rangeBitSpan.cc  rangeWordSpan.cc  rearrange.cc  serializeRequest.cc  testRigGen.cc  types.cc  uart.cc  utils.ccm
test/unit/src/: debugIntegrity.cc  queue.cc  rearrange.cc
